--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,130 @@
-/* Other rules */
+/* -------------------
+GLOBAL
+---------------------- */
+
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: "Roboto", sans-serif;
+}
+:root {
+  --violet-react: #5c47d3;
+  --grey-react: #c5c2c2;
+  --light-grey: #eeeeee;
+  --radius-blocks: 10px;
+}
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.project {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: top;
+  align-items: center;
+  flex-direction: column;
+}
+.header {
+  font-weight: 100;
+  font-size: 30px;
+  height: 100px;
+  border-bottom: 1px solid lightgray;
+  color: var(--violet-react);
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+}
+.footer {
+  font-weight: 100;
+  font-size: 14px;
+  background-color: var(--grey-react);
+  color: white;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer a {
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  margin: 0 10px;
+}
+
+/* -------------------
+ADD TASK
+---------------------- */
+
+button {
+  margin-left: 20px;
+}
+
+input {
+  width: 300px;
+  height: 30px;
+}
+
+.addTask {
+  margin: 50px 0;
+}
+
+/* -------------------
+TO DO LIST
+---------------------- */
+
+.toDoList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.task {
+  width: 500px;
+  height: 30px;
+  background-color: var(--light-grey);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.checkbox {
+  height: 20px;
+  width: 20px;
+}
+
+.done {
+  text-decoration: line-through;
+  color: var(--grey-react);
+}
+
+.remove {
+  display: none;
+}
+
+.trash {
+  margin-right: 20px;
+  height: 20px;
+  width: 20px;
+  border: none;
+}
+.trash:hover {
+  cursor: pointer;
+}
+
+/* -------------------
+ZONE DONE
+---------------------- */
+
+.zoneDone {
+  background-color: pink;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
