--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,30 @@ body {
   margin: 0 10px;
 }
 
+/* Header in dark mode */
+
+.dark-mode header {
+  border-bottom: solid 1px white;
+}
+
+.dark-mode h1 {
+  color: white;
+}
+
+.dark-mode .list-icon {
+  color: white;
+}
+
+/* Footer on dark Mode */
+
+.dark-mode footer {
+  border-top: solid 1px white;
+}
+
+.dark-mode footer p {
+  color: white;
+}
+
 /* -------------------
 ADD TASK
 ---------------------- */
@@ -99,7 +123,7 @@ TO DO LIST
   width: 20px;
 }
 
-.done {
+.crossed {
   text-decoration: line-through;
   color: var(--grey-react);
 }
@@ -114,13 +138,30 @@ TO DO LIST
   cursor: pointer;
 }
 
-/* -------------------
-ZONE DONE
----------------------- */
+/* Task on dark mode */
+.dark-mode .task {
+  background-color: var(--purple);
+}
 
-.zoneDone {
-  background-color: pink;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.dark-mode .task p {
+  color: white;
+}
+
+.dark-mode .task > span {
+  color: white;
+}
+
+/* EnterTask on dark mode */
+
+.dark-mode input[type="text"] {
+  background-color: var(--dark-grey);
+  border: 1px solid white;
+  color: white;
+}
+
+.dark-mode ::placeholder,
+.dark-mode:-ms-input-placeholder,
+.dark-mode::-ms-input-placeholder {
+  color: white;
+  opacity: 0.9;
 }
